k8s/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: homebridge
